# actiontest

./: .env.sample  .gitignore  Initialcommit.txt  README.md  generate_report.py  index.html  make_image.py  ocr.py  pyproject.toml  run_tests.py  test_admin_portal.py  test_common.py  test_login_playwright.py  test_report_20250720_083908_QA_0%.html  test_report_20250720_090400_QA_0%.html  test_report_20250720_091328_QA_0%.html  test_report_20250720_092345_QA.html  test_report_20250720_093606_QA.html  test_report_20250720_093949_QA.html  test_report_20250720_101524_QA.html
.github/workflows/: blank.yml
util/: adb_util.py  button_util.py  common_util.py  dynamic_data.py  text_util.py
